[tool.poetry]
name = "intelligent-tube"
version = "0.1.0"
description = ""
authors = ["Jackson Karel <jackson.karel2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.39.0"
google-api-python-client = "^2.149.0"
openai = "^1.53.0"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
